--- a/StyleSheets/index_stylesheet.css
+++ b/StyleSheets/index_stylesheet.css
@@ -31,6 +31,7 @@ p, h1, h2, h3, h4, h5, h6, a {
     justify-content: center;
 
     padding: 0 0 0 0;
+    margin: 5px 5px 5px 5px;
 
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 
@@ -40,7 +41,7 @@ p, h1, h2, h3, h4, h5, h6, a {
 
 .Info_Container:hover {
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-    margin-left: 10px;
+    margin-left: 15px;
 }
 
 .Info_Container a {
