--- a/StyleSheets/TYTanalizlerim_stylesheet.css
+++ b/StyleSheets/TYTanalizlerim_stylesheet.css
@@ -37,6 +37,11 @@ h4{
     display: inline-block;
     padding: 2px 2px 2px 2px;
 }
+@media only screen and (min-width: 768px) {
+    .Deneme {
+        max-width: 650px;
+    }
+}
 
 
 .Netler {
