--- a/StyleSheets/TYTanalizlerim_stylesheet.css
+++ b/StyleSheets/TYTanalizlerim_stylesheet.css
@@ -2,6 +2,11 @@ p, h1, h2, h3, h4, h5, h6, a {
     font-family: "Poppins", sans-serif;
 }
 
+body {
+    margin-top: 40vh;
+    margin-bottom: 40vh;
+}
+
 p {
     margin: 0 0 0 0;
     margin-top: 10px;
