--- a/StyleSheets/countdown_stylesheet.css
+++ b/StyleSheets/countdown_stylesheet.css
@@ -13,8 +13,10 @@ body {
     height: 100vh; 
     width: 100vw; 
     margin: 0 0 0 0 ;
+    background-color: black;
 }
 
 #countdown {
     font-size: 5vw;
+    color: white;
 }
