--- a/StyleSheets/YoutubeMatematikAkıllıKampı.css
+++ b/StyleSheets/YoutubeMatematikAkıllıKampı.css
@@ -3,6 +3,8 @@
 p, h1, h2, h3, h4, h5, h6, a {
     font-family: "Poppins", sans-serif;
     font-size: 20px;
+    margin-right: 15px;
+    margin-left: 15px;
 }
 
 
@@ -18,6 +20,7 @@ body {
     justify-content: center;
     align-items: center; 
     flex-direction: column;
+
 
 }
 
@@ -65,6 +68,8 @@ a {
 
 #InfoDiv {
     
+    width: max-content;
+
     position: fixed;
     bottom: 20%;
     right: 50%;
