--- a/StyleSheets/index_stylesheet.css
+++ b/StyleSheets/index_stylesheet.css
@@ -42,6 +42,7 @@ p, h1, h2, h3, h4, h5, h6, a {
 .Info_Container:hover {
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     margin-left: 15px;
+    background-color: aliceblue;
 }
 
 .Info_Container a {
@@ -52,4 +53,12 @@ p, h1, h2, h3, h4, h5, h6, a {
     text-decoration: none;
     color: black;
 
+}
+
+
+
+body {
+  background-image: url('../Resimler/YKS\ ANISI.jpg');
+  background-size: contain;
+  background-position:top;
 }
